adding header and jumbotron sections

--- a/index.html
+++ b/index.html
@@ -21,6 +21,28 @@
     <link rel="stylesheet" href="resources/jquery/main.js">
   </head>
   <body>
+    <!--Top header navigation section -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Explore</a></li>
+          <li><a href="#">Start a project</a></li>
+          <li><a href="#">About us</a></li>
+        </ul>
+        <img class="navbar-brand navbar-right collapse navbar-collapse" src="resources\images\logo.png" alt="This is the logo of the company">
+      </div>
+    </nav>
+
+    <!--Jumbotron section-->
+    <div class="jumbotron jumbotron-bike">
+      <div class="bike">
+        <h1>Get Going</h1>
+        <p>Jumpstart your startup with some crowdsourced seed money, or support one of our 300,000,000+ creators and get rewards.</p>
+      </div>
+    </div>
+    <div class="relative-wrapper">
+      <a href="#" class="btn btn-primary btn-lg cta">Jump in</a>
+    </div>
 
   </body>
 </html>
