finished with the featured projects section

--- a/index.html
+++ b/index.html
@@ -44,5 +44,47 @@
       <a href="#" class="btn btn-primary btn-lg cta">Jump in</a>
     </div>
 
+    <!--featured project section -->
+    <div class="container featured">
+      <div class="row">
+        <div class="col-xs-12">
+          <h2>Featured project</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-md-6">
+          <div class="image-container">
+            <a href="#"><img src="resources\images\featured-project.png" alt="This is a picture of the featured project by Leo De Firenze"></a>
+          </div>
+        </div>
+        <div class="col-xs-6 col-md-3">
+          <h3>DeFrost: A Documentary</h3>
+          <p>By Leo De Firenze</p>
+          <p>DeFrost is a documentary about growing up in a little red house in a cold, harsh valley. This is a story about my mother's childhood. This film attempts to capture vignettes of her upbringing, her family, friends, pets, and eventual depature from a freezing valley in Northern Italy, through beautiful cinematography and narration.</p>
+        </div>
+        <div class="col-xs-6 col-md-3 product-categories">
+          <h3>Product Categories</h3>
+          <ul>
+            <li>Art</li>
+            <li>Books</li>
+            <li>Crystals</li>
+            <li>Design</li>
+            <li>Doodles</li>
+            <li>Deedlybobs</li>
+            <li>Farming</li>
+            <li>Gadgets</li>
+            <li>Hoverboards</li>
+            <li>Jams, Jllies, Etc.</li>
+            <li>Magazines</li>
+            <li>Plants</li>
+            <li>Snakes & Snake equipment</li>
+            <li>Tables</li>
+            <li>Ventriliquist Figures</li>
+            <li>Yoyos</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
