--- a/index.html
+++ b/index.html
@@ -86,5 +86,47 @@
       </div>
     </div>
 
+    <!--Projects section-->
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12">
+          <h2>Projects</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-sm-4 item">
+          <div class="image-container">
+            <a href="#"><img src="resources\images\project1.png" alt="This is the Right Tights project"></a>
+          </div>
+          <h3>The Right Tights</h3>
+          <p>By Riley Mae</p>
+          <p>These tights are 50 denier, beautifully constructed, hand-dyed, and guaranteed to last (no more ladders!). Made with high quality, completely toxic-free materials. Custom colors available to all backers.</p>
+        </div>
+        <div class="col-xs-12 col-sm-4 item">
+          <div class="image-container">
+            <a href="#"><img src="resources\images\project2.png" alt="This is the Peppermint Smart Home project"></a>
+          </div>
+          <h3>Peppermint Smart Home</h3>
+          <p>By Brian McDonald</p>
+          <p>Instantly upgrade your home with technology that keeps your family and home safe. We've made Peppermint easy to use. Just talk to your phone and Peppermint will help you every step of the way.</p>
+        </div>
+        <div class="col-xs-12 col-sm-4 item">
+          <div class="image-container">
+            <a href="#"><img src="resources\images\project3.png" alt="This is the American Streetlife project"></a>
+          </div>
+          <h3>American Streetlife</h3>
+          <p>By Patrick Wallace</p>
+          <p>I've been traveling around the United States for the past two years. I've slept on hundreds of couches, more than a few benches, and captured my experiences in this 120 page photo album.</p>
+        </div>
+      </div>
+    </div>
+
+    <!--Bottom section-->
+    <div class="container-fluid support">
+      <strong>Having trouble thinking of an idea?</strong>
+      <p>Inventors block strikes at the worst times. But that's all changed with Jumpstart's Good Idea Generator Lite (GIGLi).</p>
+      <a href="#" class="btn btn-primary btn-lg">Learn more</a>
+    </div>
+
   </body>
 </html>
