--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--style sheets-->
     <link rel="stylesheet" href="resources/css/reset.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.8.0/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.css"/>
     <link rel="stylesheet" href="resources/css/style.css" type="text/css">
 
     <!--JQuery links-->
@@ -17,7 +17,7 @@
     src="https://code.jquery.com/jquery-3.2.1.min.js"
     integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.8.0/slick.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
     <link rel="stylesheet" href="resources/jquery/main.js">
   </head>
   <body>
@@ -34,10 +34,33 @@
     </nav>
 
     <!--Jumbotron section-->
-    <div class="jumbotron jumbotron-bike">
-      <div class="bike">
-        <h1>Get Going</h1>
-        <p>Jumpstart your startup with some crowdsourced seed money, or support one of our 300,000,000+ creators and get rewards.</p>
+    <div class="carousel">
+      <div class="jumbotron jumbotron-bike">
+        <div class="bike">
+          <h1>GET GOING.</h1>
+          <p>Jumpstart your startup with some crowdsourced seed money, or support one of our 300,000,000+ creators and get rewards.</p>
+        </div>
+      </div>
+
+      <div class="jumbotron jumbotron-beer">
+        <div class="bike">
+          <h1>GET THINKING</h1>
+          <p>Meet like-minded individuals who will help fuel your creative juices.</p>
+        </div>
+      </div>
+
+      <div class="jumbotron jumbotron-flowers">
+        <div class="bike">
+          <h1>GET CREATING.</h1>
+          <p>Stop overthinking projects and begin putting them out into the world.</p>
+        </div>
+      </div>
+
+      <div class="jumbotron jumbotron-duffel">
+        <div class="bike">
+          <h1>GET STARTED.</h1>
+          <p>What are you waiting for? Today's the day for your next big idea.</p>
+        </div>
       </div>
     </div>
     <div class="relative-wrapper">
@@ -128,5 +151,18 @@
       <a href="#" class="btn btn-primary btn-lg">Learn more</a>
     </div>
 
+    <!--SLICK -->
+    <script type="text/javascript">
+    $(document).ready(function(){
+      $('.carousel').slick({
+        autoplay: true,
+        autoplaySpeed: 4000,
+        arrows: false,
+        draggable: false,
+        pauseOnFocus: false,
+        pauseOnHover: false,
+      });
+    });
+    </script>
   </body>
 </html>
