trying to hide the navbar while scrolling

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
-    <link rel="stylesheet" href="resources/jquery/main.js">
+    <script type="text/javascript" src="resources/jquery/main.js"></script>
   </head>
   <body>
     <!--Top header navigation section -->
@@ -151,7 +151,7 @@
       <a href="#" class="btn btn-primary btn-lg">Learn more</a>
     </div>
 
-    <!--SLICK -->
+    <!--SLICK-->
     <script type="text/javascript">
     $(document).ready(function(){
       $('.carousel').slick({
@@ -163,6 +163,6 @@
         pauseOnHover: false,
       });
     });
-    </script>
+  </script>
   </body>
 </html>
